feat(database): database v2 created

--- a/app/docker-compose.yaml
+++ b/app/docker-compose.yaml
@@ -5,6 +5,6 @@ services:
     environment:
       POSTGRES_USER: gabuntu
       POSTGRES_PASSWORD: gabuntuPassword
-      POSTGRES_DB: mydatabase
+      POSTGRES_DB: mydb
     ports:
       - "5432:5432"
