--- a/app/docker-compose.yaml
+++ b/app/docker-compose.yaml
@@ -12,6 +12,8 @@ services:
       POSTGRES_DB: mydb
     ports:
       - "5432:5432"
+    volumes:
+      - db_data:/var/lib/postgresql/data
 
   user_management:
     build: ./microservices/user_management
@@ -37,6 +39,13 @@ services:
     depends_on:
       - db
 
+  questionnaire:
+    build: ./microservices/questionnaire
+    ports:
+      - "3003:3003"
+    depends_on:
+      - db
+
   tyk_gateway:
     image: 'tykio/tyk-gateway:v4.0.0'
     ports:
@@ -49,3 +58,6 @@ services:
 
   redis:
     image: 'redis:6.2-alpine'
+
+volumes:
+  db_data:
