--- a/app/tyk_api_gateway/tyk.conf
+++ b/app/tyk_api_gateway/tyk.conf
@@ -1,7 +1,7 @@
 {
   "listen_port": 8080,
-  "secret": "your-tyk-secret",
-  "node_secret": "your-node-secret",
+  "secret": "UvsSYnB7eEKRAUnfqhV3",
+  "node_secret": "gf1ktlGMJrBzLqtMZPsx",
   "template_path": "/opt/tyk-gateway/templates",
   "use_db_app_configs": false,
   "db_app_conf_options": {
