--- a/app/services/registration/package.json
+++ b/app/services/registration/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "user_management",
+  "name": "registration",
   "version": "1.0.0",
-  "description": "Microservice for user management",
+  "description": "Service for registration",
   "main": "app.js",
   "scripts": {
     "start": "node app.js" 
