--- a/app/services/authentication/package.json
+++ b/app/services/authentication/package.json
@@ -2,9 +2,10 @@
   "name": "authentication",
   "version": "1.0.0",
   "description": "Microservice for authentication",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node server.js",
+    "test": "jest"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
@@ -13,5 +14,9 @@
     "pg": "^8.7.1",
     "bcrypt": "^5.0.1",
     "validator": "^13.6.0"
+  },
+  "devDependencies": {
+    "jest": "^27.4.7",
+    "supertest": "^6.3.0"
   }
 }
