--- a/app/services/registration/package.json
+++ b/app/services/registration/package.json
@@ -2,9 +2,10 @@
   "name": "registration",
   "version": "1.0.0",
   "description": "Service for registration",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node app.js" 
+    "start": "node server.js",
+    "test": "jest"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -12,5 +13,9 @@
     "express": "^4.17.1",
     "pg": "^8.7.1",
     "validator": "^13.6.0"
+  },
+  "devDependencies": {
+    "jest": "^27.4.5",
+    "supertest": "^6.3.0"
   }
 }
