--- a/app/docker-compose.yaml
+++ b/app/docker-compose.yaml
@@ -70,6 +70,8 @@ services:
     build: ./services/real_mark
     container_name: RealMark
     restart: always
+    environment:
+      DATABASE_URL: "postgresql://gabuntu:gabuntuPassword@db:5432/mydb"
     ports:
       - "3005:3005"
     depends_on:
