--- a/app/services/real_mark/Gemfile
+++ b/app/services/real_mark/Gemfile
@@ -3,3 +3,8 @@ source 'https://rubygems.org'
 gem 'sinatra'
 gem 'sinatra-activerecord'
 gem 'pg'
+
+group :test do
+  gem 'minitest'
+  gem 'rack-test'
+end
