--- a/app/services/evaluation/Dockerfile.test
+++ b/app/services/evaluation/Dockerfile.test
@@ -13,13 +13,16 @@ RUN apt-get update && apt-get install -y libpq-dev gcc && \
 WORKDIR /app
 
 # Copy the current directory contents into the container at /app
-COPY ./src /app
+COPY . /app
+
+# Set PYTHONPATH
+#ENV PYTHONPATH=/app/src
 
 # Make port 3004 available to the world outside this container
 EXPOSE 3004
 
 # Define environment variable
-ENV DATABASE_URL postgresql://gabuntu:gabuntuPassword@db:5432/mydb
+#ENV DATABASE_URL postgresql://gabuntu:gabuntuPassword@db:5432/mydb
 
-# Run main.py when the container launches
-CMD ["python", "main.py"]
+# Run tests.py when the container launches
+#CMD ["pytest", "-v", "./tests"]
