feat(front-end): final version front-end

--- a/app/frontend/.gitignore
+++ b/app/frontend/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -18,6 +16,18 @@
 .env.test.local
 .env.production.local
 
+# debug files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# logs
+*.log
+
+# editor files
+/.idea
+/.vscode
+.sw
+
+# macOS files
+.DS_Store
