--- a/app/services/registration/Dockerfile
+++ b/app/services/registration/Dockerfile
@@ -1,4 +1,5 @@
-FROM node:14
+# Stage 1 - Build
+FROM node:14 AS builder
 
 WORKDIR /app
 
@@ -7,6 +8,14 @@ COPY package*.json ./
 RUN npm install
 
 COPY . .
+
+
+# Stage 2 - Production
+FROM node:14-alpine
+
+WORKDIR /app
+
+COPY --from=builder /app .
 
 EXPOSE 3001
 
